@@ -10,11 +10,12 @@ Version 0.4c
 * Yet more typo fixes
 * Twopenny's armor shop added to Rigard shop street (The Observer)
 * Continuation on the combat rewrite:
+ - Cooldowns on Bash/Grand slam reduced
  - Pierce replaced
  - Dirty blow replaced
  - Hamstring replaced
  - Kicksand replaced
- - Cooldowns on Bash/Grand slam reduced
+ - FocusStrike replaced
 
 --------------------------------------------
              PREVIOUS VERSIONS
